attempted to convert aboutme into html

--- a/index.html
+++ b/index.html
@@ -5,3 +5,20 @@ subtitle:
 use-site-title: true
 ---
 
+Hello! Welcome to my page! I'm an astronomy PhD student advised by <a href="http://people.physics.tamu.edu/lmacri/">Prof. Lucas Macri</a>
+at Texas A&M University. I am also pursuing an Advanced Certificate in Applied Statistics. <br>
+<ul>
+  
+<li> My main research focus is time series analysis and classification of variable stars, but I enjoy analyzing other types of data too! 
+  For more information, please click the <b>Projects</b> tab. </li>
+
+<li> I currently teach an undergraduate astronomy lab course. For more information, please click the <b>ASTR 102</b> tab. </li>
+
+  <li> I co-lead <a href="https://people.physics.tamu.edu/aibhleog/supa/home.html">SUPA</a>, a diversity organization in the Department of 
+Physics and Astronomy, along with <a href="https://people.physics.tamu.edu/aibhleog/">Taylor Hutchison</a>, Sarah Cantu, 
+    and <a href="https://tkonchady.github.io/">Tarini Konchady</a>.</li>
+
+<li> Outside of school, I love reading fantasy and young adult fiction, playing video games, 
+  and creating poorly-made latte art with my espresso machine. </li>
+
+ </ul>
