--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ use-site-title: true
 ---
 
 Hello! Welcome to my page! I'm an astronomy PhD student advised by <a href="http://people.physics.tamu.edu/lmacri/">Prof. Lucas Macri</a>
-at Texas A&M University. I am also pursuing an Advanced Certificate in Applied Statistics. <br><br><br>
+at Texas A&M University. I am also pursuing an Advanced Certificate in Applied Statistics. <br><br>
 <ul>
   
 <li> My main research focus is time series analysis and classification of variable stars, but I enjoy analyzing other types of data too! 
