--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ subtitle:
 use-site-title: true
 ---
 
-Hello! Welcome to my page! I'm an astronomy PhD student advised by <a href="http://people.physics.tamu.edu/lmacri/">Prof. Lucas Macri</a>
+Welcome to my website! I'm an astronomy PhD student advised by <a href="http://people.physics.tamu.edu/lmacri/">Prof. Lucas Macri</a>
 at Texas A&M University. I am also pursuing an Advanced Certificate in Applied Statistics. <br><br><br>
 <ul>
   
