--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@ Physics and Astronomy, along with <a href="https://people.physics.tamu.edu/aibhl
     and <a href="https://tkonchady.github.io/">Tarini Konchady</a>.</li><br>
 
 <li> Outside of school, I love reading fantasy and young adult fiction, playing video games, 
-  and creating poorly-made latte art with my espresso machine. </li>
+  and creating abstract latte art with my espresso machine. </li>
 
  </ul>
