updated link to astr 102

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ at Texas A&M University. I am also pursuing an Advanced Certificate in Applied S
 <li> My main research focus is time series analysis and classification of variable stars, but I enjoy analyzing other types of data too! 
   Please click the <b>Projects</b> tab to learn more. </li> <br>
 
-<li> I currently teach an undergraduate astronomy lab course. For more information, please click the <b>ASTR 102</b> tab. </li><br>
+<li> I currently teach an undergraduate astronomy lab course. For more information, please click the 
+  <a href="https://stringkm.github.io/astr102/">ASTR 102</a> tab. </li><br>
 
 <li> I co-lead <a href="https://people.physics.tamu.edu/aibhleog/supa/home.html">SUPA</a>, a diversity organization in the Department of 
 Physics and Astronomy, along with <a href="https://people.physics.tamu.edu/aibhleog/">Taylor Hutchison</a>, Sarah Cantu, 
