removed link to unfinished SUPA page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ at Texas A&M University. I am also pursuing an Advanced Certificate in Applied S
 <li> I currently teach an undergraduate astronomy lab course. For more information, please click the 
   <a href="https://stringkm.github.io/astr102/">ASTR 102</a> tab. </li><br>
 
-<li> I co-lead <a href="https://people.physics.tamu.edu/aibhleog/supa/home.html">SUPA</a>, a diversity organization in the Department of 
+<li> I co-lead SUPA, a diversity organization in the Department of 
 Physics and Astronomy, along with <a href="https://people.physics.tamu.edu/aibhleog/">Taylor Hutchison</a>, Sarah Cantu, 
     and <a href="https://tkonchady.github.io/">Tarini Konchady</a>.</li><br>
 
