changed student to candidate :)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 use-site-title: true
 ---
 
-Welcome to my website! I'm an astronomy PhD student advised by <a href="http://people.physics.tamu.edu/lmacri/">Prof. Lucas Macri</a>
+Welcome to my website! I'm an astronomy PhD candidate advised by <a href="http://people.physics.tamu.edu/lmacri/">Prof. Lucas Macri</a>
 at Texas A&M University. I am also pursuing an Advanced Certificate in Applied Statistics. <br><br><br>
 <ul>
   
