--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@ at Texas A&M University. I am also pursuing an Advanced Certificate in Applied S
 Physics and Astronomy, along with <a href="https://people.physics.tamu.edu/aibhleog/">Taylor Hutchison</a>, Sarah Cantu, 
     and <a href="https://tkonchady.github.io/">Tarini Konchady</a>.</li><br>
 
-<li> Outside of astronomy, I love to read fantasy and young adult fiction, listen to electronic music and movie soundtracks, and play video games. </li>
+<li> Outside of astronomy, I love to read fantasy fiction, listen to electronic music and movie soundtracks, and play video games. </li>
 
  </ul>
